# chessmg

./: Cargo.toml  LICENSE
src/: bitboard.rs  board.rs  errors.rs  lib.rs  magic.rs  move_gen.rs  piece.rs  utils.rs
