[package]
name = "chessmg"
version = "0.1.0"
edition = "2024"
description = "A chess move generator written in Rust"
license = "MIT"
repository = "https://github.com/paulmialane/chessmg"

[lib]
name = "chessmg"
path = "src/lib.rs"

[dependencies]
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
once_cell = "1.21.3"
rand = "0.9.2"
