[package]
name = "chessmg"
version = "0.1.0"
edition = "2024"
description = "A chess move generator written in Rust"
license = "MIT"
repository = "https://github.com/paulmialane/chessmg"

[lib]
name = "chessmg"
path = "src/lib.rs"

[lints.clippy]
similar_names = "allow"

[dependencies]
bincode = { version = "2.0", features = ["serde"] }
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
once_cell = "1.21.3"
rand = "0.9.2"
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }

[profile.release]
debug = 1
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
rpath = false
debug-assertions = false
incremental = false
overflow-checks = false
